<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="my_apk_name" translatable="false">Screen Locker BYOD</string>
    <string name="app_name" translatable="false">Screen Locker BYOD</string>
    <string name="toolbar_title" translatable="false">Screen Locker BYOD</string>
    <string name="apktype" translatable="false">BYOD</string>
    <string name="number_zero" translatable="false">0</string>
    <string name="number_one" translatable="false">1</string>
    <string name="number_two" translatable="false">2</string>
    <string name="number_three" translatable="false">3</string>
    <string name="number_four" translatable="false">4</string>
    <string name="number_five" translatable="false">5</string>
    <string name="number_six" translatable="false">6</string>
    <string name="number_seven" translatable="false">7</string>
    <string name="number_eight" translatable="false">8</string>
    <string name="number_nine" translatable="false">9</string>
    <string name="btn_backspace">Clear</string>
    <string name="description_notification_icon">notification icon</string>
    <string name="description_app_image">app image</string>
    <string name="unlock">UNLOCK</string>
    <string name="enter_pin">Enter pin</string>
    <string name="re_enter_pin">Re-Enter pin</string>
    <string name="confirm_pin">Set Pin</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="pin">PIN</string>
    <string name="set_guest_password">Set Guest Password</string>
    <string name="set_encrypted_password">Set Encrypted Password</string>
    <string name="please_enter_your_current_password">Please enter your current password.</string>
    <string name="wrong_password_entered">You have entered wrong password.</string>
    <string name="password_changed">password changed</string>
    <string name="password_not_changed">password not changed</string>
    <string name="hint_please_enter_guest_pin">Please enter guest pin</string>
    <string name="hint_please_enter_duress_pin">Please enter Wipe PIN</string>
    <string name="hint_please_confirm_your_pin">Please confirm your pin</string>
    <string name="hint_please_enter_encrypted_pin">Please enter encrypted pin</string>
    <string name="empty">Password field is empty.</string>
    <string name="password_dont_match">Password don\'t match.</string>
    <string name="set_guest_code">Guest Pin Code</string>
    <string name="set_duress_code">Wipe Pin Code</string>
    <string name="set_encrypted_code">Encrypted Pin Code</string>
    <string name="set_background_for">Set Background for</string>
    <string name="guest_all">Turn ON Guest ALL</string>
    <string name="encryption_all">Turn ON Encrypted ALL</string>
    <string name="enable_all">Enable All</string>
    <string name="please_enter_current_guest_password">Please enter current Guest password.</string>
    <string name="please_enter_current_encrypted_password">Please enter current Encrypted password.</string>
    <string name="please_enter_current_duress_password">Please enter current Wipe password.</string>
    <string name="check_for_updates"><u>Check for updates</u></string>
    <string name="set_code_pin">Set code pin</string>
    <string name="hint_please_enter_code_pin">Please enter code pin</string>
    <string name="please_enter_code_admin_password">Please enter code admin password.</string>
    <string name="code">Code</string>
    <string name="set_apps_permissions">Application permission</string>
    <string name="reset_guest_encrypted_pass">Reset passwords</string>
    <string name="change_admin_panel_code">Admin panel password</string>
    <string name="password_is_changed_to_default">Password is changed to default.</string>
    <string name="install_apps">Install Apps</string>
    <string name="please_check_network_connection">Please check your network connection.</string>
    <string name="sim_title">SIM</string>
    <string name="set_duress_pass">Set Wipe Password</string>
    <string name="no_internet">Internet not available</string>
    <string name="processing">Activating device please wait.</string>
    <string name="submit">Submit</string>
    <string name="permission_required">We need this permission to read hardware ids to secure your device</string>
    <string name="dont_have_permission">We do not have permission.</string>
    <string name="permission_denied">Permission denied</string>
    <string name="info">Info :</string>
    <string name="device_already_linked">Device linked successfully</string>
    <string name="link_request_pending">Link request pending!</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="link_device">Link device</string>
    <string name="device_not_linked">Device not linked!</string>
    <string name="stop_linking">Stop Linking</string>
    <string name="session_expired">Session expired</string>
    <string name="expired">expired</string>
    <string name="system_controls">System permissions</string>
    <string name="enable_vpn">Enable VPN</string>
    <string name="pgp_email">PGP Email</string>
    <string name="chat_id">Chat Id</string>
    <string name="sim_id">Sim Id</string>
    <string name="settings_controls">Secure settings permission</string>
    <string name="gps_not_found_title">GPS not found</string>
    <string name="gps_not_found_message">Please turn on gps to further proceed</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fine_location_and_cross_location">Fine Location</string>
    <string name="some_error_occurred">Some Error Occurred!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="language">Languages</string>
    <string name="install_app_activity">installAppActivity</string>
    <string name="secure_market_activity">secureMarketActivity</string>
    <string name="uptodate">You are currently up to date.</string>
    <string name="install_app_message">App is installing</string>
    <string name="permissions">Application permission</string>
    <string name="link_heading">To generate a valid IMEI please go to </string>
    <string name="link">\"https://dyrk.org/tools/imei\"</string>
    <string name="link_title">Link</string>
    <string name="simtext">SIM:</string>
    <string name="slot">Slot :</string>
    <string name="name">/ Name :</string>
    <string name="apn">/ Apn :</string>
    <string name="guest">Guest</string>
    <string name="encrypted">Encrypted</string>
    <string name="status">Status</string>
    <string name="status_active">Active</string>
    <string name="status_disabled">Disabled</string>
    <string name="status_not_inserted">Not Inserted</string>
    <string name="title_activity_secure_simsettings">SecureSIMSettings</string>
    <string name="sim_1">SIM 1</string>
    <string name="sim_2">SIM 2</string>
    <string name="add">ADD +</string>
    <string name="status_online">Online</string>
    <string name="enable_all_unregistered">Enable All \n<small>(Unregistered)</small></string>
    <string name="enable_all_registered">Enable All \n<small>(Registered)</small></string>
    <string name="status_disconnected">Offline</string>
    <string name="note">Note: </string>
    <string name="note_hint">Note</string>
    <string name="support">SUPPORT</string>
    <string name="manage_passwords_settings">Manage Passwords</string>
    <string name="set_background_image_settings">Set Background Image</string>
    <string name="about">About</string>
    <string name="activated">ACTIVATED</string>
    <string name="manage_password_title">Manage Passwords</string>
    <string name="activated_code">Activated</string>
    <string name="not_set">Not Set</string>
    <string name="invalid_password_title">Invalid Password</string>
    <string name="invalid_password_message">The password you entered is incorrect.</string>
    <string name="duress_password_warning">Warning!</string>
    <string name="duress_password_message">Entering Wipe Pin when device is locked will wipe your phone data. You cannot undo this action. All data will be deleted from target device without any confirmation. There is no way to reverse this action.</string>
    <string name="ok_text">Ok</string>
    <string name="cancel_text">Cancel</string>
    <string name="password_changed_title">Password Changed!</string>
    <string name="password_changed_message">Password Successfully Changed.</string>
    <string name="change_wallpaper_title">Wallpaper  &amp; display</string>
    <string name="guest_password_dialog_title">Enter Guest Password</string>
    <string name="encrypted_password_dialog_title">Enter Encrypted Password</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="update_dialog_title">Update</string>
    <string name="update_dialog_message">Checking For Updates</string>
    <string name="update_available_title">Update Available</string>
    <string name="update_available_message">New update available! Press OK to update your system.</string>
    <string name="error_occured_toast">An error occurred, Please Try latter.</string>
    <string name="network_not_connected">Network Not Connected!</string>
    <string name="network_not_connected_message">Please connect to the internet before proceeding.</string>
    <string name="network_setup">NETWORK SETUP</string>
    <string name="enable_admin_device_feature">You have enabled the Admin Device features</string>
    <string name="problem_admin_device_feature">Problem to enable the Admin Device features</string>
    <string name="bg_save_encrypted">Background saved for encrypted</string>
    <string name="bg_save_guest">Background saved for guest</string>
    <string name="active">Active</string>
    <string name="link_device_title">Link Device</string>
    <string name="error_321">Error 321 Device ID (</string>
    <string name="contact_support">) please contact support</string>
    <string name="error_322">Error 322 Device ID (</string>
    <string name="error323">Error 323 Device ID (</string>
    <string name="invaild_dealer_code">Invalid Dealer or Code</string>
    <string name="guest_wallpaper">Guest Wallpaper</string>
    <string name="encrypted_wallpaper">Encrypted Wallpaper</string>
    <string name="lock_screen_image">Lock Screen Wallpaper</string>
    <string name="duress_pin_disabled">Wipe PIN Disabled</string>
    <string name="password_taken">This password is taken please try again</string>
    <string name="wallpapers_title">Wallpapers</string>
    <string name="bg_set_encrypted">Background set for encrypted</string>
    <string name="bg_set_guest">Background set for guest</string>
    <string name="bg_set_lockscreen">Background set for lock screen</string>
    <string name="set_as_wallpaper">Set As Wallpaper</string>
    <string name="app_names">App Names</string>
    <string name="enable">Enable</string>
    <string name="wifi">Wifi</string>
    <string name="secure_market_title">Secure Market</string>
    <string name="battery">Battery</string>
    <string name="languages_amp_input"><![CDATA[Languages & Input]]></string>
    <string name="date_amp_time"><![CDATA[Date & time]]></string>
    <string name="data_usage">Data Usage</string>
    <string name="updates">Updates</string>
    <string name="data_consumption_settings">Data Consumption</string>
    <string name="auto_updates_secure_market">Auto updates, Secure Market</string>
    <string name="data_usage_statistics">Data usage statistics</string>
    <string name="imei">IMEI</string>
    <string name="change_imei_numbers">Change IMEI numbers</string>
    <string name="language_input_methods">Language, Input Methods</string>
    <string name="date_time_timezone">Date, Time, Timezone</string>
    <string name="battery_information_usage">Battery information, Usage</string>
</resources>