<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.screenlocker.secure.settings.AdvanceSettings">

    <include
        android:id="@+id/appBar"
        layout="@layout/main_toolbar" />

    <LinearLayout
        android:id="@+id/tvDataCunsumption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:visibility="visible">


        <ImageView
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_8sdp"
            android:contentDescription="ic_mobile_data"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_consumption" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_1sdp"
                android:text="@string/data_consumption_settings"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/auto_updates_secure_market"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_darken" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tvDataUSage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:visibility="visible">


        <ImageView
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_8sdp"
            android:contentDescription="ic_mobile_data"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_data_usage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_1sdp"
                android:text="@string/data_usage"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/data_usage_statistics"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_darken" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tv_IMEI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:visibility="visible">


        <ImageView
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_8sdp"
            android:contentDescription="ic_mobile_data"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_imei_s" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_1sdp"
                android:text="@string/imei"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/change_imei_numbers"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_darken" />


        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/language_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:visibility="visible">


        <ImageView
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_8sdp"
            android:contentDescription="ic_mobile_data"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_language" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_1sdp"
                android:text="@string/languages_amp_input"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

            <TextView
                android:id="@+id/wifi_name11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/language_input_methods"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_darken" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dateTime_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:visibility="visible">


        <ImageView
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_8sdp"
            android:contentDescription="ic_mobile_data"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_date_time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_1sdp"
                android:text="@string/date_amp_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/date_time_timezone"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_darken" />


        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/battery_cotainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:visibility="visible">


        <ImageView
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_8sdp"
            android:contentDescription="ic_mobile_data"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_battery" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_1sdp"
                android:text="@string/battery"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/battery_information_usage"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_darken" />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>
